# VSCode_cpp_config

./: readme.md
B站UP配置/c/: helloworld  helloworld.c
B站UP配置/c++/: a.out  min.cpp  min.h  test.cpp
CMake/: CMakeLists.txt  empFile.txt  main.cpp
CMake/include/: boss.h  empolyee.h  manager.h  worker.h  workerManager.h
CMake/src/: boss.cpp  empolyee.cpp  manager.cpp  workerManager.cpp
tiny/: hello.cpp  test.cpp
官方配置/test/: helloworld  helloworld.cpp
